# lcrl

./: .gitignore  LICENSE  MANIFEST.in  README.md  animator.py  pyproject.toml  setup.py  train.py
lcrl/: train.py
lcrl/animator/: animator.py
lcrl/automata/: goal1_or_goal2.py  goal1_then_goal2.py  ldba.py
lcrl/core/: lcrl_core.py
lcrl/environments/: gridworld_1.py  gridworld_2.py  gridworld_3.py  slippery_grid.py
lcrl/scripts/: __init__.py  lcrl.py
scripts/: training_ddpg.py  training_gridworld.py  training_nfq.py  training_ql.py
src/: train.py
src/animator/: animator.py
src/automata/: __init__.py  cart_pole.py  frozen_lake_1_2_3.py  frozen_lake_4_5_6.py  frozenlake_reach_avoid.py  frozenlake_sequential.py  goal1_or_goal2.py  goal1_then_goal2.py  ldba.py  mars_rover_1_3.py  mars_rover_1_and_3.py  mars_rover_2_4.py  mars_rover_2_and_4.py  minecraft_1.py  minecraft_2.py  minecraft_3.py  minecraft_4.py  minecraft_5.py  minecraft_6.py  minecraft_7.py  pacman.py  pacman_foods.py  slp_easy.py  slp_hard.py  surveillance.py
src/core/: lcrl_core.py
src/environments/: CartPole.py  MarsRoverDA.py  __init__.py  cart_pole.py  frozen_lake_2.py  frozen_lake_3.py  frozen_lake_4.py  frozen_lake_4x4.py  frozen_lake_8x8.py  frozenlake_1.py  frozenlake_2.py  frozenlake_3.py  frozenlake_4.py  frozenlake_4x4.py  frozenlake_5.py  frozenlake_6.py  frozenlake_8x8.py  gridworld_1.py  gridworld_2.py  gridworld_3.py  mars_rover_1_2.py  mars_rover_3_4.py  mars_rover_continuous_action.py  mars_rover_discrete_action.py  minecraft.py  pacman.py  pacman_f.py  robot_surv.py  slp_lrg.py  slp_med.py  slp_sml.py
(+50 files in other folders)
