[build-system]
requires = ["setuptools>=40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcrl"
version = "0.0.9.2"
authors = [{name = "Hosein Hasanbeig", email = "hosein.hasanbeig@icloud.com"}]
description = "Logically-Constrained Reinforcement Learning"
readme = "README.md"
keywords = ["rl", "logic", "environment", "agent"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "matplotlib",
  "dill>=0.3.2",
  "imageio",
  "tqdm",
  "tensorflow>=2",
]

[project.urls]
Homepage = "https://github.com/grockious/lcrl"